StyleControl.css
body {
    background-color: #eee;
}

.button {
    width: 120px;
    text-align: center;
}

.holder {
    margin-top: 5px;
    margin-bottom: 5px;
    width: 100%; /*900px*/
    height: 700px;
    /*background-color: #aaa;*/
}

.cursorBox {
    position:relative;
    top:-600px;
    opacity:30%;
    margin-right: 10px;
    width: 100%; /*500px*/
    height: 500px;
    background-color: lightblue;
}

.safeZone {
    position: absolute;
    /*margin-left: 40%;*/
    margin-top: 200px;
    /*width: 20%;*/
    width: 100px;
    height: 100px;
    border-radius: 50%;
    background-color: yellow;
}

.activeCursorBox { /* indicates the cursor box is now active, but is expressed through the color change in safe zone*/
    position: absolute;
    /*margin-left: 40%;*/
    margin-top: 200px;
    /*width: 20%;*/
    width: 100px;
    height: 100px;
    background-color: greenyellow;
}

.sliderContainer {
    width: 100%;
}

.slider {
    height: 20px; /* Specified height */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    transition: opacity .3s;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1; /* Fully shown on mouse-over */
}

.tabContent {
    display: none;
}

